downgrade code base for ss

--- a/graphs/Makefile
+++ b/graphs/Makefile
@@ -1,5 +1,5 @@
-example: ./examples/main.cc
-	g++ ./examples/main.cc -o ./bin/example.o -std=c++1z
+example: ./main.cc
+	g++ ./main.cc -o ./bin/example.o -std=c++1z
 
 run:
 	./bin/example.o
