--- a/trees/Makefile
+++ b/trees/Makefile
@@ -2,4 +2,5 @@ example: ./main.cc
 	g++ ./main.cc -o ./bin/example.o -std=c++1z
 
 run:
+	g++ ./main.cc -o ./bin/example.o -std=c++1z
 	./bin/example.o
